# rng

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/rng_backend/: Cargo.toml  rng_backend.did
src/rng_backend/src/: lib.rs
src/rng_frontend/src/: index.html  index.js
