[package]
name = "rng_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.10"
ic-cdk = "0.11.3"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
rand_chacha = "0.3.1"
hex = "0.4.3"